# embassy-B-U585I-IOT02A-flash-example

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
.devcontainer/setup/: arm-none-eabi-gcc.sh  bindgen-deps.sh  probe-rs.sh
src/: main.rs
