[package]
edition = "2021"
name = "b-u585at-iot02a-flash-example"

[dependencies]
# Change stm32u5g9zj to your chip name, if necessary.
embassy-stm32 = { version = "0.2", features = [
  # "low-power",
  "defmt",
  "unstable-pac",
  "stm32u585ai",
  "time-driver-any",
] }
embassy-executor = { version = "0.7", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
cortex-m = { version = "0.7", features = [
  "inline-asm",
  "critical-section-single-core"
]}
cortex-m-rt = "0.7"
panic-probe = { version = "1", features = ["print-defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"

[features]
## Use secure registers when TrustZone is enabled
trustzone-secure = ["embassy-stm32/trustzone-secure"]

[profile.release]
debug = 2
